# CiosParallel

./: CMakeLists.txt  CiosParallel.bat  install.bat  libparallel.pc.in
Qt/: libparallel.pro
include/: parallel.hpp
scripts/: install.bat  x64.bat  x86.bat
src/: parallel.cpp
src/Windows/: CpuUsage.cpp  Latcher.cpp  Locker.cpp  Lockerz.cpp  Mutex.cpp  Mutexz.cpp  PrivateCpuUsage.cpp  PrivateLockerz.cpp  PrivateMutexz.cpp  PrivateParallel.cpp  PrivateParallel.hpp  PrivateSemaphorez.cpp  PrivateSharedMemory.cpp  PrivateSharedMemoryz.cpp  Semaphore.cpp  Semaphorez.cpp  SharedMemory.cpp  SharedMemoryz.cpp  Thread.cpp  ThreadData.cpp
